--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(City_Recommender)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(City_Recommender main.cpp)
+add_executable(City_Recommender main.cpp HashTable.h HashTable.cpp Graph.h Graph.cpp)
