Added separate chaining hash table class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,7 @@ project(City_Recommender)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(City_Recommender main.cpp HashTable.h HashTable.cpp Graph.h Graph.cpp)
+add_executable(City_Recommender main.cpp HashTable.h HashTable.cpp Graph.h Graph.cpp
+        SeparateChain.h
+        SeparateChain.cpp
+)
